DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Jul-12-2004 patrickh    Began adding very basic exception handling to the
                        kernel.
                        NEW VERSION: 1.1.154
Jun-06-2004 patrickh    Refactored surface viewport configurations to remove
                        unnecessary nesting of configuration elements.
May-22-2004 patrickh    Moved vrj::FileIO out of the vrj library and into the
                        sample code tree under pfTools.
                        NEW VERSION: 1.1.153
May-22-2004 patrickh    Moved pfSoundNode and pfSoundTraverser out of the
                        vrj_pf library and into the sample code tree under
                        pfTools.
                        NEW VERSION: 1.1.152
May-22-2004 patrickh    Removed vrj::Timer.  vpr::Interval should be used
                        instead.
                        NEW VERSION: 1.1.151

[2.0 Alpha 4 released - 4.28.2004]=============================================
Apr-28-2004 aronb       NEW VERSION: 1.1.150
Apr-11-2004 patrickh    VR Juggler now depends on an installed version of GMTL.
Apr-05-2004 patrickh    Updated to JCCL 0.17.0.
Mar-19-2004 patrickh    Restored the ability to specify a search path for
                        configuration files using the environment variable
                        $VJ_CFG_PATH (or $JCCL_CFG_PATH).  A default search
                        path is now set if neither environment variable is
                        defined.
Mar-03-2004 pallindo    Tracked surfaces now track any positional device
                        correctly.
                        NEW VERSION: 1.1.149
Dec-07-2003 allenb      Added vrj::App::latePreFrame()
                        NEW VERSION: 1.1.148
Oct-06-2003 allenb      Fixed bug where resizing of glx windows was not
                        updating projection information for the display.