@@ -660,6 +660,9 @@ AC_CONFIG_FILES([
    vrjconfig/Makefile
    vrjconfig/Makefile.inc
    vrjconfig/customeditors/Makefile
+   vrjconfig/customeditors/display_window/build.xml
+   vrjconfig/customeditors/display_window/Makefile
+   vrjconfig/customeditors/display_window/Makefile.inc
    vrjconfig/customeditors/intersense/build.xml
    vrjconfig/customeditors/intersense/Makefile
    vrjconfig/customeditors/intersense/Makefile.inc
